--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,9 @@
   ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF . ':(exclude).env.local'"
 
 [build.environment]
-  NEXT_PUBLIC_ZALO_CLIENT_ID = ""
-  NEXT_PUBLIC_ZALO_CLIENT_SECRET = ""
-  NEXT_PUBLIC_ZALO_REDIRECT_URI = ""
+  NEXT_PUBLIC_ZALO_CLIENT_ID = "3437989441134535876"
+  NEXT_PUBLIC_ZALO_CLIENT_SECRET = "YxmfZE6Fjy0Ks7wB2Hn4"
+  NEXT_PUBLIC_API_BASE_URL = "https://api.example.com"
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
 
