--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,18 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_BASE_URL": "@next_public_api_base_url"
-  }
+    "NEXT_PUBLIC_API_BASE_URL": "@next_public_api_base_url",
+    "NODE_ENV": "production"
+  },
+  "regions": ["sin1"],
+  "framework": "nextjs"
 }
