--- a/vercel.json
+++ b/vercel.json
@@ -19,5 +19,25 @@
     "env": {
       "NODE_ENV": "production"
     },
-    "framework": "nextjs"
+    "framework": "nextjs",
+    "regions": ["sin1"],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "X-Frame-Options",
+            "value": "DENY"
+          },
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          },
+          {
+            "key": "Referrer-Policy",
+            "value": "strict-origin-when-cross-origin"
+          }
+        ]
+      }
+    ]
   }
