--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "^4.3.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "next": "15.1.3",
