--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,24 @@
 {
     "version": 2,
+    "framework": "nextjs",
+    "buildCommand": "next build",
+    "devCommand": "next dev",
     "builds": [
       {
         "src": "package.json",
         "use": "@vercel/next"
       }
     ],
-    "routes": [
+    "rewrites": [
       {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
+        "source": "/api/:path*",
+        "destination": "/api/:path*"
       },
       {
-        "src": "/(.*)",
-        "dest": "/$1"
+        "source": "/(.*)",
+        "destination": "/$1"
       }
     ],
-    "env": {
-      "NODE_ENV": "production"
-    },
-    "framework": "nextjs",
-    "regions": ["sin1"],
     "headers": [
       {
         "source": "/(.*)",
@@ -39,5 +37,9 @@
           }
         ]
       }
-    ]
+    ],
+    "env": {
+      "NODE_ENV": "production"
+    },
+    "regions": ["sin1"]
   }
