--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # === Auth ===
 # -----------------------------
 
-NEXT_PUBLIC_API_BASE_URL=https://fastapi-cenvilaunch.onrender.com
-
+# NEXT_PUBLIC_API_BASE_URL=https://fastapi-cenvilaunch.onrender.com
+NEXT_PUBLIC_API_BASE_URL=https://67e21df497fc65f53534a70e.mockapi.io
 
 
 # (Optionally for backend token or secrets)
