--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@payos/node": "^1.0.10",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
     "@react-oauth/google": "^0.12.1",
@@ -28,6 +29,7 @@
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "next": "15.1.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
